--- a/src/Styles/MedicinePickup.css
+++ b/src/Styles/MedicinePickup.css
@@ -1,6 +1,6 @@
 .medicine-pickup-container {
   background-color: #fff;
-  max-width: 800px; /* Increased to accommodate horizontal cards */
+  max-width: 600px; /* Increased to accommodate horizontal cards */
   margin: 35px auto;
   padding: 20px;
   border-radius: 8px;
@@ -10,6 +10,7 @@
 
 .medicine-pickup-card{
   margin: 0px 20px 0px; /* Reduced side margins to allow more space for horizontal cards */
+  padding: 0px 60px;
 }
 
 .medicine-pickup-title {
@@ -312,7 +313,7 @@
 }
 
 .medicine-pickup-fetch-btn {
-  background-color: #3cb371; /* Use the same color for both buttons */
+  background-color: #33b48b; /* Use the same color for both buttons */
   color: white;
   border: none;
   border-radius: 4px;
@@ -325,11 +326,11 @@
 }
 
 .medicine-pickup-fetch-btn:hover {
-  background-color: #2e8b57;
+  background-color: #2a9d7a;
 }
 
 .medicine-pickup-verify-btn:hover {
-  background-color: #388e3c;
+  background-color: #2a9d7a;
 }
 /* For smaller screens */
 @media (max-width: 768px) {
