--- a/src/Styles/DoctorAssigningAutomatic.css
+++ b/src/Styles/DoctorAssigningAutomatic.css
@@ -60,7 +60,7 @@
   font-size: 1rem;
 }
 
-.doctor-assigning-automatic-radio-group {
+.doctor-assigning-automatic-checkbox-group {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -69,14 +69,14 @@
   white-space: nowrap;
 }
 
-.doctor-assigning-automatic-radio-group label {
+.doctor-assigning-automatic-checkbox-group label {
   display: flex;
   align-items: center;
   font-weight: normal;
   white-space: nowrap;
 }
 
-.doctor-assigning-automatic-radio-group input[type="radio"] {
+.doctor-assigning-automatic-checkbox-group input[type="checkbox"] {
   margin-right: 5px;
 }
 
@@ -123,11 +123,11 @@
     font-size: 1.5rem;
   }
 
-  .doctor-assigning-automatic-radio-group {
+  .doctor-assigning-automatic-checkbox-group {
     gap: 8px;
   }
 
-  .doctor-assigning-automatic-radio-group label {
+  .doctor-assigning-automatic-checkbox-group label {
     font-size: 1rem;
   }
 }
