--- a/src/Styles/PatientRegistration.css
+++ b/src/Styles/PatientRegistration.css
@@ -62,7 +62,7 @@
 
 .patient-registration-radio-group {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: flex-start;
   gap: 5px;
   margin-top: 5px;
