--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #f2f2f2;
+  background-color: #fff;
 }
 
 .app-container {
