--- a/src/Styles/PatientRegistration.css
+++ b/src/Styles/PatientRegistration.css
@@ -1,5 +1,5 @@
 .patient-registration-container {
-  background-color: #fff;
+  background-color: #f5f5f5;
   max-width: 600px;
   margin: 35px auto;
   padding: 20px;
@@ -82,7 +82,7 @@
 
 .patient-registration-submit-btn {
   width: 100%;
-  background-color: #33b48b;
+  background-color: #9e9e9e;
   color: #fff;
   padding: 10px;
   border: none;
@@ -94,7 +94,7 @@
 }
 
 .patient-registration-submit-btn:hover {
-  background-color: #2a9d7a;
+  background-color: #5d5d5d;
 }
 
 @media screen and (max-width: 600px) {
