--- a/src/Styles/PatientRegistration.css
+++ b/src/Styles/PatientRegistration.css
@@ -4,7 +4,6 @@
   margin: 35px auto;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   font-family: 'Arial', sans-serif;
 }
 
@@ -15,8 +14,8 @@
 }
 
 .patient-registration-success-msg {
-  background-color: #d4edda;
-  color: #155724;
+  background: #66bca15d;
+  color: #176101;
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #c3e6cb;
@@ -25,7 +24,7 @@
 }
 
 .patient-registration-error-msg {
-  background-color: #f8d7da;
+  background-color: #fb9ea6;
   color: #721c24;
   padding: 10px;
   margin-bottom: 15px;
@@ -82,7 +81,7 @@
 
 .patient-registration-submit-btn {
   width: 100%;
-  background-color: #9e9e9e;
+  background-color: #373737;
   color: #fff;
   padding: 10px;
   border: none;
@@ -94,7 +93,7 @@
 }
 
 .patient-registration-submit-btn:hover {
-  background-color: #5d5d5d;
+  background-color: #0c0c0c;
 }
 
 @media screen and (max-width: 600px) {
