--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -68,6 +68,21 @@
   text-align: center;
 }
 
+.volunteer-signup {
+  text-align: center;
+  margin-top: 20px;
+}
+.volunteer-signup button {
+  font-weight: 600;
+  color: black;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
 @media screen and (max-width: 600px) {
   .login-container {
     margin: 20vh auto;
